[gd_scene load_steps=3 format=3 uid="uid://fd77svwn3vr5"]

[ext_resource type="Script" path="res://card_hand.gd" id="1_rsy11"]
[ext_resource type="PackedScene" uid="uid://bvynj1e32wykt" path="res://components/card_visual.tscn" id="2_4ayqm"]

[node name="CardHand" type="Control"]
custom_minimum_size = Vector2(100, 125)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -62.5
offset_right = 50.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 125)
script = ExtResource("1_rsy11")

[node name="CardVisual" parent="." instance=ExtResource("2_4ayqm")]
layout_mode = 0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
